<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_view1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="@dimen/min_width"
    android:minHeight="@dimen/min_height"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDialog4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="@dimen/marginDialogRight"
        android:layout_marginLeft="@dimen/marginDialogLeft"
         />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full"
        android:id="@+id/btnFull"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/changePat"
        android:layout_toRightOf="@+id/save"
        android:text="@string/finish"
        
        android:layout_gravity="center"
         />

 

</LinearLayout>