<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_view1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:minWidth="@dimen/min_width"
    android:minHeight="@dimen/min_height"
     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDialog3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginRight="@dimen/marginDialogRight"
        android:layout_marginLeft="@dimen/marginDialogLeft"
        
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/image" />

    <Button
        android:id="@+id/changePatInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/save"
        android:layout_below="@+id/url"
        android:text="@string/changePatInit" 
        
        
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/next2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        
        android:layout_gravity="center"
         />

</LinearLayout>